# ClaudeDevKitV2

./: .gitignore  README.md  pyproject.toml
.claude/commands/: ai-ask.md  ai-check.md  ai-deadcode.md  ai-goal.md  ai-help.md  ai-init.md  ai-roadmap.md  ai-scan.md  ai-security.md  ai-sync.md
.claude/skills/constraints-loader/: SKILL.md
.claude/skills/dead-code-detection/: SKILL.md
.claude/skills/goal-design/: SKILL.md
.claude/skills/goal-discovery/: SKILL.md
.claude/skills/help-router/: SKILL.md
.claude/skills/init-from-proposal/: SKILL.md
.claude/skills/project-fit-check/: SKILL.md
.claude/skills/read-only-qa/: SKILL.md
.claude/skills/security-secrets-scan/: SKILL.md
.claude/skills/sync-and-history/: SKILL.md
.claude/skills/tdd-execution/: SKILL.md
docs/ai/: README.md  change-log.md  current-goal.md  current-goal.state.yaml  roadmap.md
docs/ai/constraints/: global.md
scripts/: download_model.sh
src/voice_coder/: __init__.py  audio.py  cli.py  config.py  emitter.py  extractor.py  recognizer.py  watcher.py
tests/: __init__.py  test_config.py  test_extractor.py  test_watcher.py
